separate spotify logic to separate dir
